--- a/index.html
+++ b/index.html
@@ -384,9 +384,7 @@
         <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
       </div>
       <form method="dialog">
-        <button class="button ok-button" 
-        type="submit" 
-        aria-controls="dialog-id">
+        <button class="button ok-button" type="submit" aria-controls="dialog-id">
           <span class="button__text">Ok</span>
         </button>
       </form>
