--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </h2>
         <div class="card__image-container">
           <span class="image-label">&lt;/HTML&gt;</span>
-          <img src="./images/Begin.webp" alt="Фритрек и нулевой спринт: Подготовка к работе" class="card__image" />
+          <img src="./images/Begin.webp" alt="Асфальтная дорога в форме стрелки на фоне зеленых лугов направляется в небо" class="card__image" />
         </div>
         <div class="card__text-container">
           <p class="card__text">
@@ -93,7 +93,7 @@
         <h2 class="card__title">1 спринт: Я — чистый лист</h2>
         <div class="card__image-container">
           <span class="image-label">&lt;/HTML&gt;</span>
-          <img src="./images/Clear.webp" alt="1 спринт: Я — чистый лист" class="card__image grayscale" loading="lazy" />
+          <img src="./images/Clear.webp" alt="Чистый белый лист с лежащей на нём ручкой, рядом разброшены смятые листы бумаги" class="card__image grayscale" loading="lazy" />
         </div>
         <div class="card__text-container">
           <p class="card__text">
@@ -132,7 +132,7 @@
         <h2 class="card__title">1 спринт: А если не получится?</h2>
         <div class="card__image-container">
           <span class="image-label">&lt;CSS&gt;</span>
-          <img src="./images/Bear.webp" alt="1 спринт: А если не получится?" class="card__image invert"
+          <img src="./images/Bear.webp" alt="Картина на которой медведь тянется на ветке за яблоком" class="card__image invert"
             loading="lazy" />
         </div>
         <div class="card__text-container">
@@ -170,7 +170,7 @@
         <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
         <div class="card__image-container">
           <span class="image-label">&lt;desigions&gt;</span>
-          <img src="./images/Ideal.webp" alt="2 спринт: Погоня за идеалом" class="card__image saturate"
+          <img src="./images/Ideal.webp" alt="Силуэт человека тянется к Солнцу, стоя на краю скалы" class="card__image saturate"
             loading="lazy" />
         </div>
         <div class="card__text-container">
@@ -210,7 +210,7 @@
         <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
         <div class="card__image-container">
           <span class="image-label">care</span>
-          <img src="./images/Help.webp" alt="2 спринт: О тех, кто рядом" class="card__image hue-rotate"
+          <img src="./images/Help.webp" alt="Парень и девушка разбираются в программировании сидя за компьютером" class="card__image hue-rotate"
             loading="lazy" />
         </div>
         <div class="card__text-container">
@@ -251,7 +251,7 @@
         <h2 class="card__title">3 спринт: Обходные стратегии</h2>
         <div class="card__image-container">
           <span class="image-label">&lt;support&gt;</span>
-          <img src="./images/Ways.webp" alt="3 спринт: Обходные стратегии" class="card__image sepia" loading="lazy" />
+          <img src="./images/Ways.webp" alt="Стрелки по разному проходят через кирпичную стену, под ней, сверху неё и сквозь стену" class="card__image sepia" loading="lazy" />
         </div>
         <div class="card__text-container">
           <p class="card__text">
@@ -288,7 +288,7 @@
         <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
         <div class="card__image-container">
           <span class="image-label">&lt;lifes-style: none;&gt;</span>
-          <img src="./images/Tired.webp" alt="3 спринт: Когда опускаются руки" class="card__image blur"
+          <img src="./images/Tired.webp" alt="Уставшая девушка с опущенными руками, в спине у неё ключ как в заводной игрушке" class="card__image blur"
             loading="lazy" />
         </div>
         <div class="card__text-container">
@@ -328,7 +328,7 @@
         <h2 class="card__title">«Сейчас я здесь»</h2>
         <div class="card__image-container">
           <span class="image-label">&lt;experience&gt;</span>
-          <img src="./images/car.webp" alt="«Сейчас я здесь»" class="card__image multi-filter" loading="lazy" />
+          <img src="./images/car.webp" alt="«Пиксельная машина по продаже еды»" class="card__image multi-filter" loading="lazy" />
         </div>
         <div class="card__text-container">
           <p class="card__text">
